--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
+<head>
+  <title></title>
+</head>
+  
 <body>
-
-Hello there, awesome person!
+  Hello there, awesome person!
 </body>
-  </html>
+</html>
